# msg

./: .gitignore  Cargo.toml  README.md
examples/shmem_ring/: client.rs  server.rs
